Bug 436549 - DrKonqi allows users to file worthless crash reports against EOL software
Summary: DrKonqi allows users to file worthless crash reports against EOL software
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 253209 315073 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-03 19:31 UTC by Nate Graham
Modified: 2021-08-05 09:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-05-03 19:31:16 UTC
For example: Bug 436489.

Allowing users to file bugs against versions of the software that are EOL does nobody any good:
1. It gives users a false hope that the bug will be fixed in a minor version update
2. It creates useless work for bug triagers who have to either close the bug as RESOLVED UNMAINTAINED or else mark it as a duplicate of some other bug
3. It masks problematic distro update schedules by allowing users to blame us for likely-already-solved problems rather than understand the fact that they're using ancient software because they chose a slow discrete-release distro or just haven't upgraded their system in 100 years

It would be nice if we could store some kind of database about which versions of our software are currently supported and/or receiving updates. And for crashes affecting older versions, we could either silently discard the crash data, or else have DrKonqi display a message that the software is too old to receive support and the problem may be fixed in a newer version.
Comment 1 Harald Sitter 2021-05-04 06:45:29 UTC
The system is already there in the backend https://invent.kde.org/plasma/drkonqi/-/blob/master/src/bugzillaintegration/productmapping.cpp#L156 alas, I believe the GUI doodad is missing, and my track record with touching the dialog code has been 10/10 on fatal regressions :S
Comment 2 Harald Sitter 2021-06-21 00:39:22 UTC
*** Bug 253209 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2021-06-21 00:45:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/29
Comment 4 Harald Sitter 2021-06-25 09:18:23 UTC
*** Bug 315073 has been marked as a duplicate of this bug. ***
Comment 5 Harald Sitter 2021-08-05 09:19:54 UTC
Git commit dd1a8a1140a58bdff2f9facc309247faeff38eb0 by Harald Sitter.
Committed on 05/08/2021 at 09:19.
Pushed by sitter into branch 'master'.

prevent filing bugs against unsupported plunder

new page just after bugzilla version check is used to intercept reports
that target inactive products/versions super early on so as to not waste
anyone's time more than necessary (arguable distros should actually
disable drkonqi if they can't keep up our support window :shrug:)

this is largely inspired by the version page but with slightly different
ui. much like version this page cannot be moved beyond if it detects a
problem. unlike version it doesn't allow retrying. the assumption here
would be that if we were able to talk to bugzilla we should have gotten
product data milliseconds after that so there is no real opportunity for
failure here and therefore nothing a retry would change.

since we now have bugzilla pages early on they switch themselves
inappropriate (and thus get skipped) if bugzilla isn't used
FIXED-IN: 5.23

M  +2    -0    src/CMakeLists.txt
A  +106  -0    src/bugzillaintegration/assistantpage_bugzilla_supported_entities.cpp     [License: GPL(3+eV) GPL(v3.0)]
A  +44   -0    src/bugzillaintegration/assistantpage_bugzilla_supported_entities.h     [License: GPL(3+eV) GPL(v3.0)]
M  +6    -0    src/bugzillaintegration/assistantpage_bugzilla_version.cpp
M  +4    -0    src/bugzillaintegration/productmapping.cpp
M  +2    -0    src/bugzillaintegration/productmapping.h
M  +12   -6    src/bugzillaintegration/reportassistantdialog.cpp
M  +2    -1    src/bugzillaintegration/reportassistantdialog.h
M  +5    -0    src/bugzillaintegration/reportinterface.cpp
M  +1    -0    src/bugzillaintegration/reportinterface.h
A  +178  -0    src/bugzillaintegration/ui/assistantpage_bugzilla_supported_entities.ui
M  +1    -0    src/drkonqi_globals.h

https://invent.kde.org/plasma/drkonqi/commit/dd1a8a1140a58bdff2f9facc309247faeff38eb0