prevent filing bugs against unsupported plunder

new page just after bugzilla version check is used to intercept reports
that target inactive products/versions super early on so as to not waste
anyone's time more than necessary (arguable distros should actually
disable drkonqi if they can't keep up our support window :shrug:)

this is largely inspired by the version page but with slightly different
ui. much like version this page cannot be moved beyond if it detects a
problem. unlike version it doesn't allow retrying. the assumption here
would be that if we were able to talk to bugzilla we should have gotten
product data milliseconds after that so there is no real opportunity for
failure here and therefore nothing a retry would change.

since we now have bugzilla pages early on they switch themselves
inappropriate (and thus get skipped) if bugzilla isn't used

BUG: 436549
FIXED-IN: 5.23