src/bugzillaintegration/reportinterface.cpp
@@ -473,3 +473,8 @@ ApplicationDetailsExamples *ReportInterface::appDetailsExamples() const
 {
     return m_appDetailsExamples;
 }
+
+ProductMapping *ReportInterface::productMapping() const
+{
+    return m_productMapping;
+}
